[project]
name = "python-server-sample"
version = "0.1.0"
description = "REST API sample"
authors = [
    { name = "koki-algebra", email = "biz.kokiyamada1022@gmail.com" }
]
dependencies = [
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.29.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
]

[tool.rye.scripts]
fmt = { chain = ["ruff format ./app ./tests"]}
lint = { chain = [
    "ruff check --fix ./app ./tests",
    "mypy ./app ./tests"
]}
test = { chain = ["pytest ./tests"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["./app"]
